test/cases/compile_errors/unknown_length_pointer_to_opaque.zig
export const T = [*]opaque {};

// error
//
// :1:21: error: unknown-length pointer to opaque not allowed
